Fixing more colors for contrast errors in WAVE

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -187,7 +187,7 @@ sup {
   top: -0.5em; }
 
 blockquote {
-  border-left: solid 3px rgba(210, 215, 217, 0.75);
+  border-left: solid 3px #666;  /* dark gray */
   font-style: italic;
   margin: 0 0 2em 0;
   padding: 0.5em 0 0.5em 2em; }
@@ -195,7 +195,7 @@ blockquote {
 code {
   background: rgba(230, 235, 237, 0.25);
   border-radius: 0.375em;
-  border: solid 1px rgba(210, 215, 217, 0.75);
+  border: solid 3px #666;  /* dark gray */
   font-family: "Courier New", monospace;
   font-size: 0.9em;
   margin: 0 0.25em;
@@ -214,7 +214,7 @@ pre {
 
 hr {
   border: 0;
-  border-bottom: solid 1px rgba(210, 215, 217, 0.75);
+  border-bottom: solid 3px #666;  /* dark gray */
   margin: 2em 0; }
   hr.major {
     margin: 3em 0; }
